--- a/index.ipynb
+++ b/index.ipynb
@@ -33,9 +33,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "new_employees = ['jim', 'tracy', 'lisa']"
@@ -58,10 +56,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[\"Hi Jim, I'm so glad to be working with you!\",\n",
+       " \"Hi Tracy, I'm so glad to be working with you!\",\n",
+       " \"Hi Lisa, I'm so glad to be working with you!\"]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "welcome_messages = []\n",
     "for new_employee in new_employees:\n",
